add 'personal' to the index

--- a/example/index.html
+++ b/example/index.html
@@ -41,6 +41,12 @@
           <tbody>
 
             <tr class="prototype rule-before">
+              <td><a href="personal/">A Personal Site</a></td>
+              <td>August 6, 2014</td>
+              <td>OK</td>
+            </tr><!-- .prototype.-->
+
+            <tr class="prototype rule-before">
               <td><a href="hello-world.php">Hello, world!</a></td>
               <td>August 6, 2014</td>
               <td>OK</td>
